--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/igor-arkhipenko/expressjs-fast-course#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
