--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/igor-arkhipenko/expressjs-fast-course#readme",
   "dependencies": {
     "colors": "^1.4.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   },
   "devDependencies": {
